2015-05-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2347: Fix CACAO patches to apply again
	* patches/cacao/memory.patch:
	Removed; needs a complete rewrite
	if still required.
	* Makefile.am:
	(ICEDTEA_PATCHES): Drop CACAO memory
	patch.
	* NEWS: Updated.
	* patches/cacao/launcher.patch:
	Regenerated.

2015-05-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR1369: Remove outdated bootstrap configure tests
	or make them fail on error
	* INSTALL:
	Drop ant requirement and remove obsolete
	options --with-netbeans-home, --with-ant-home,
	--with-xalan2-jar, --with-xalan2-serializer-jar,
	--with-xerces2-jar, --with-jaxp-drop-zip,
	--with-jaf-drop-zip, --with-jaxws-drop-zip,
	--with-tzdata-dir and --with-netbeans.
	Update --with-gcj-home to --with-jdk-home.
	* Makefile.am:
	(clean-local): Remove clean-rt.
	(.PHONY): Likewise.
	(icedtea): Drop addition of tz.properties.
	(icedtea-debug): Likewise.
	(jamvm): Drop rt.stamp dependency.
	(cacao): Depend on OPENJDK_TREE instead of rt.stamp
	(rt-source-files.txt): Removed.
	(rt-class-files.stamp): Likewise.
	(rt): Likewise.
	(clean-rt): Likewise.
	* NEWS: Updated.
	* README: Remove obsolete paragraph about being
	a pre-release of OpenJDK 7. Link to OpenJDK
	conformance testing.
	* acinclude.m4:
	(IT_JAVAH): Removed.
	(IT_LIBRARY_CHECK): Likewise.
	(IT_PR40630_CHECK): Likewise.
	(IT_WITH_TZDATA_DIR): Likewise.
	(IT_GETDTDTYPE_CHECK): Likewise.
	* configure.ac:
	Drop search for Ant and xsltproc. Remove
	calls to macros removed from acinclude.m4
	and class checks.

2014-06-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* javaws.desktop,
	* javaws.png:
	Remove obsolete files.
	* Makefile.am:
	(EXTRA_DIST): Remove above.

2015-05-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR1341: Remove Rhino support
	* rewriter/agpl-3.0.txt,
	* rewriter/com/redhat/rewriter/ClassRewriter.java:
	Removed.
	* INSTALL: Remove references to Rhino.
	* Makefile.am:
	(REWRITER_BUILD_DIR): Removed.